--- a/src/styles/homeCases.css
+++ b/src/styles/homeCases.css
@@ -66,6 +66,7 @@
 
 .sidebarCases .pendingTasks-content-card {
   margin-bottom: 18px;
+  flex-direction: column;
 }
 
 .pendingTasks-content-card .card-fvenci {
@@ -102,12 +103,17 @@
   color: var(--primary-blue);
 }
 
-.pendingTasks-content-card  .card-taskName span {
+.pendingTasks-content-card  .card-taskName .taskName {
   margin: 0;
+  width: 65px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
   font-size: 11px;
   font-weight: 500;
   line-height: 15px;
 }
+
 
 .sidebarCases .caseProgress {
   /* margin-top: 20px; */
